--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ python-dotenv
 aiohttp
 cloudscraper
 flask
-git+https://github.com/KurimuzonAkuma/pyrogram
+#git+https://github.com/KurimuzonAkuma/pyrogram
+pyrogram
